--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,41 +8,47 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
-    <title>Login</title>
+    <title>Registration</title>
   </head>
-<body>
-    <div class="container-fluid">
-        <form class="registration-form">
-            <h4 class="text-center">Registration</h4>
-            <div class="mb-3 mt-5">
-                <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
-                <label class="form-label" for="form3Example1cg">Your Name</label>
-            </div>
-            <div class="mb-3">
-                <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
-                <label class="form-label" for="form3Example3cg">Your Email</label>
-            </div>
-            <div class="form-outline mb-4">
-                <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
-                <label class="form-label" for="form3Example4cg">Password</label>
-            </div>
-            <div class="form-outline mb-4">
-                <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
-                <label class="form-label" for="form3Example4cdg">Repeat your password</label>
-            </div>
-            <div class="form-check d-flex justify-content-center mb-5">
-                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
-                <label class="form-check-label" for="form2Example3g">
-                    I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
-                </label>
-            </div>
-            <div class="d-flex justify-content-center">
-                <button type="button"
-                    class="btn btn-primary">Register</button>
-            </div>
-                <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"
-                class="fw-bold text-body"><u>Login here</u></a></p>
-        </form>
-    </div>
-</body>
+    <body>
+        <div class="container-fluid">
+            <form class="registration-form" action="/auth/register" method="POST">
+                <h4 class="text-center">Registration</h4>
+                <div class="mb-3 mt-5">
+                    <input type="text" name="name" value="<%= typeof name != 'undefined' ? name: '' %>" id="form3Example1cg" class="form-control form-control-lg" required/>
+                    <label class="form-label" for="form3Example1cg">Your Name</label>
+                </div>
+                <div class="mb-3">
+                    <input type="email" name="email" value="<%= typeof email != 'undefined' ? email: '' %>" id="form3Example3cg" class="form-control form-control-lg" required/>
+                    <label class="form-label" for="form3Example3cg">Your Email</label>
+                </div>
+                <div class="form-outline mb-4">
+                    <input type="password" name="password" id="form3Example4cg" class="form-control form-control-lg" required/>
+                    <label class="form-label" for="form3Example4cg">Password</label>
+                </div>
+                <div class="form-outline mb-4">
+                    <input type="password" name="passwordConfirm" id="form3Example4cdg" class="form-control form-control-lg" required/>
+                    <label class="form-label" for="form3Example4cdg">Repeat your password</label>
+                </div>
+                <div class="form-check d-flex justify-content-center mb-5">
+                    <input class="form-check-input me-2" type="checkbox" name="acceptTerms" value="accepted" id="form2Example3cg" required/>
+                    <label class="form-check-label" for="form2Example3g">
+                        I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
+                    </label>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn btn-primary">Register</button>
+                </div>
+                    <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="#!"
+                    class="fw-bold text-body"><u>Login here</u></a></p>
+                    <% if (message) { %>
+                        <div class="d-flex justify-content-center mt-3" id="message-container">
+                            <div class="alert alert-danger w-100 text-center" role="alert">
+                                <%= message %>
+                            </div>
+                        </div>
+                    <% } %>
+            </form>
+        </div>
+    </body>
 </html>
