add the api to tmdb and made changes in 'dashboard.ejs' and 'dashboard.js'

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,1 +1,43 @@
-<h1>DASHBOARD</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
+    <title>Dashboard</title>
+  </head>
+  <body>
+    <header>
+      <form class="dashboard-form" id="dashboard-form">
+        <input type="text" id="search" placeholder="Search" class="search">
+      </form>
+    </header>
+    <main id="main">
+      <div class="movie">
+          <img src="https://images.unsplash.com/photo-1557683316-973673baf926?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" 
+          alt="image">
+          <div class="movie-info">
+            <h3>Movie Title</h3>
+            <span class="green">9.5</span>
+          </div>
+          <div class="overview">
+            <h3>Overview</h3>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.
+          </div>
+      </div>
+      <div class="movie">
+          <img src="https://images.unsplash.com/photo-1557683316-973673baf926?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" 
+          alt="image">
+          <div class="movie-info">
+            <h3>Movie Title</h3>
+            <span class="green">9.5</span>
+          </div>
+          <div class="overview">
+            <h3>Overview</h3>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.
+          </div>
+      </div>
+    </main>
+    <script src="/js-scripts/dashboard.js"></script>
+  </body>
+</html>
