--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,12 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>Login</title>
   </head>
   <body>
     <div class="container-fluid">
-        <form class="login-form" action="/auth/login" method="POST">
+        <form class="form-shared login-form" action="/auth/login" method="POST">
             <h4 class="text-center">Login</h4>
             <div class="mb-3 mt-5">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
