--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,12 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>Registration</title>
   </head>
     <body>
         <div class="container-fluid">
-            <form class="registration-form" action="/auth/register" method="POST">
+            <form class="form-shared register-form" action="/auth/register" method="POST">
                 <h4 class="text-center">Registration</h4>
                 <div class="mb-3 mt-5">
                     <input type="text" name="name" value="<%= typeof name != 'undefined' ? name: '' %>" id="form3Example1cg" class="form-control form-control-lg" required/>
