--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,6 +12,12 @@
         <input type="text" id="search" placeholder="Search" class="search">
       </form>
     </header>
+    <div id="tags">
+      <div class="tag">Action</div>
+      <div class="tag">Advanture</div>
+      <div class="tag">Drama</div>
+      <div class="tag">Comedy</div>
+    </div>
     <main id="main">
       <div class="movie">
           <img src="https://images.unsplash.com/photo-1557683316-973673baf926?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" 
