--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,9 +8,22 @@
   </head>
   <body>
     <header>
+      <nav class="navbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="/dashboard" class="nav-link">Dashboard</a>
+          </li>
+          <li class="nav-item" >
+            <a href="/profile" class="nav-link">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a href="/auth/logout" class="nav-link">Logout</a>
+          </li>
+        </ul>
       <form class="dashboard-form" id="dashboard-form">
         <input type="text" id="search" placeholder="Search" class="search">
       </form>
+      </nav>
     </header>
     <div id="tags">
       <div class="tag">Action</div>
@@ -46,4 +59,9 @@
     </main>
     <script src="/js-scripts/dashboard.js"></script>
   </body>
+  <footer class="footer">
+    <div class="container">
+        <span>&copy; 2024 moviefy. All rights reserved.</span>
+    </div>
+</footer>
 </html>
