--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
               <div id="emailHelp" class="form-text">Forget password?</div>
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
-            <p class="text-center text-muted mt-5 mb-0">You dont have an account? <a href="#!"
+            <p class="text-center text-muted mt-5 mb-0">You dont have an account? <a href="/register"
               class="fw-bold text-body"><u>Register here</u></a></p>
             <% if (message) { %>
               <div class="d-flex justify-content-center mt-3">
@@ -40,4 +40,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
   </body>
+  <footer class="footer">
+    <div class="container">
+        <span>&copy; 2024 moviefy. All rights reserved.</span>
+    </div>
+</footer>
 </html>
