add updateProfile in controllers/profile and add comments

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -32,7 +32,7 @@
             </nav>
         </header>
         <div class="container-fluid">
-            <form class="form-shared register-form" action="/auth/register" method="POST">
+            <form class="form-shared register-form" action="/profile/update" method="POST">
                 <h4 class="text-center">Profile Settings</h4>
                 <div class="mb-3 mt-5">
                     <input type="text" name="name" value="<%= typeof name != 'undefined' ? name: '' %>" id="form3Example1cg" class="form-control form-control-lg" required/>
