--- a/public/styles.css
+++ b/public/styles.css
@@ -3,12 +3,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    position: relative;
 }
 
 body{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(75,14,154,1) 35%, rgba(0,212,255,1) 100%);
     font-family: 'Poppins', sans-serif;
-    margin: 0;
 }
 
 .form-shared{
@@ -115,6 +115,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding-bottom: 5rem;
 }
 
 .movie {
@@ -216,11 +217,12 @@ main {
 }
 
 .footer {
-    margin-top: 6rem;
     background-color: #f8f9fa;
     text-align: center;
-    padding: 0.5em 0;
-    position: relative;
+    padding: 0.5em;
+    position: absolute;
+    left: 0;
     bottom: 0;
     width: 100%;
+    overflow: auto;
 }
