changed test docu

--- a/public/styles.css
+++ b/public/styles.css
@@ -216,7 +216,7 @@ main {
     margin-top: 2rem;
 }
 
-.footer {
+/* .footer {
     background-color: #f8f9fa;
     text-align: center;
     padding: 0.5em;
@@ -225,4 +225,4 @@ main {
     bottom: 0;
     width: 100%;
     overflow: auto;
-}
+} */
