--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -53,8 +53,10 @@
                 <div class="d-flex justify-content-center">
                     <button type="submit" class="btn btn-primary">Update data</button>
                 </div>
-                    <p class="text-center text-muted mt-5 mb-0">You want to delete your account?<a href="/register"
+                <!-- <form class="form-shared register-form" action="/update" method="POST" onsubmit="return confirm ('Are you sure you want to delete your account?')">
+                    <p class="text-center text-muted mt-5 mb-0">You want to delete your account?<a href="/profile/delete"
                     class="fw-bold text-body"><u>Delete account!</u></a></p>
+                </form> -->
                     <% if (message) { %>
                         <div class="d-flex justify-content-center mt-3" id="message-container">
                             <div class="alert alert-danger w-100 text-center" role="alert">
@@ -65,9 +67,4 @@
             </form>
         </div>
     </body>
-    <footer class="footer">
-        <div class="container">
-            <span>&copy; 2024 moviefy. All rights reserved.</span>
-        </div>
-    </footer>
 </html>
